--- a/home.html
+++ b/home.html
@@ -78,9 +78,9 @@
 
       <!-- Weaather -->
 
-      <div class="card mb-4 rounded-3 shadow-sm" style="background-color: rgba(196, 91, 10, 0.2); max-width: 50%;">
+      <div class="card mb-4 rounded-3 shadow-sm" style="background-color: rgba(108, 108, 107, 0.2); ">
         <div class="card-header py-3" style="background-color: rgba(171, 104, 26, 0.2); color: aliceblue;">
-          <h4 class="my-0 fw-normal">Jamshedpur</h4>
+          <h4 class="my-0 fw-normal"><strong>Jamshedpur</strong></h4>
         </div>
         <div class="card-body" style="background-color: rgba(84, 84, 84, 0.2); color:aliceblue;">
           <h1 class="card-title pricing-card-title"><span id="temp"></span>°C<small class="text-body-secondary"
@@ -98,9 +98,9 @@
 
       <!-- News -->
       <div class="card mb-4 rounded-3 shadow-sm" id="newssection"
-        style="background-color: rgba(84, 84, 84, 0.4); color:aliceblue; max-width: 50%; ">
+        style="background-color: rgba(84, 84, 84, 0.4); color:aliceblue; max-width: 50%; min-width: 300px;">
         <div class="card-header py-3" style="background-color: rgba(171, 104, 26, 0.4); color: aliceblue;">
-          <h4 class="my-0 fw-normal text-center">News Section</h4>
+          <h4 class="my-0 fw-normal text-center"><strong>News Section</strong></h4>
         </div>
         <ul class="list-unstyled mt-3 mb-4" style="padding: 10px; ">
           <li class="headline"><span class="col" id="news" style="color: aliceblue; font-size: 18px;"></span></li>
@@ -115,7 +115,7 @@
       <div class="card mb-4 rounded-3 shadow-sm" id="sales"
         style="background-color: rgba(84, 84, 84, 0.4); color:aliceblue; ">
         <div class="card-header py-3" style="background-color: rgba(171, 104, 26, 0.4); color: aliceblue;">
-          <h4 class="my-0 fw-normal text-center">Your Sales</h4>
+          <h4 class="my-0 fw-normal text-center"><strong>Your Sales</strong></h4>
         </div>
         <div style="display: flex; flex-wrap: wrap; justify-content: space-between;">
           <div class="outcircle c1" style="margin: 20px;">
@@ -196,8 +196,8 @@
     </div>
 
 
-    <div class="tablediv">
-      <table class="table table-hover" style="color: bisque; width: 80%; border: 2px solid bisque;">
+    <div class="tablediv" >
+      <table class="table table-hover" style="color: bisque; width: 80%; border: 2px solid bisque; max-width: 95%;">
         <h2 class="heading">Your Listings</h2>
         <thead>
           <th>S no.
