--- a/home.html
+++ b/home.html
@@ -10,10 +10,24 @@
     integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
   <link rel="stylesheet" href="stylehome.css" type="text/css">
   <link rel="stylesheet" href="style2.css" type="text/css" media="screen and (max-width: 1060px" )>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    
+    <link rel="stylesheet" href="stylesheet.css" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
+    <link href="assets/fonts/sb-bistro/sb-bistro.css" rel="stylesheet" type="text/css">
+    <link href="assets/fonts/font-awesome/font-awesome.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" type="text/css" media="all" href="assets/packages/bootstrap/bootstrap.css">
+    <link rel="stylesheet" type="text/css" media="all" href="assets/packages/o2system-ui/o2system-ui.css">
+    <link rel="stylesheet" type="text/css" media="all" href="assets/packages/owl-carousel/owl-carousel.css">
+    <link rel="stylesheet" type="text/css" media="all" href="assets/packages/cloudzoom/cloudzoom.css">
+    <link rel="stylesheet" type="text/css" media="all" href="assets/packages/thumbelina/thumbelina.css">
+    <link rel="stylesheet" type="text/css" media="all" href="assets/packages/bootstrap-touchspin/bootstrap-touchspin.css">
+    <link rel="stylesheet" type="text/css" media="all" href="assets/css/theme.css">
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <!-- <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
       <div class="container">
         <a class="navbar-brand" href="#">
@@ -43,10 +57,48 @@
         </ul>
       </div>
     </div>
-  </nav>
+  </nav> -->
 
-  <h1 style="margin-top: 50px;">Welcome <span id="displayname"></span></h1>
-  <h2 style="margin-top: 10px;">You mean a lot to Us :) </h2>
+  <nav class="navbar fixed-top navbar-expand-md navbar-dark bg-transparent" id="page-navigation">
+    <div class="container">
+        <!-- Toggle Button -->
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarcollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarcollapse">
+            <!-- Navbar Menu -->
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a href="home.html" class="nav-link active">HOME</a>
+                </li>
+                <li class="nav-item">
+                    <a href="schemes.html" class="nav-link active">SCHEMES</a>
+                </li>
+                <li class="navbar-item">
+                  <button class="nav-link" id="logout"
+                    style="background-color: rgba(224, 0, 0, 0.7); border-radius: 3px; color: aliceblue;"
+                    onclick="logout(event)">LogOut</button>
+                </li>
+            </ul>
+          </div>
+    </div>
+  </nav>
+  <div class="banner">
+    <div class="jumbotron jumbotron-bg text-center rounded-0" style="background-image: url('assets/img/bg.jpg');">
+        <div class="container">
+            <h1 class="pt-5" style="text-shadow: #000000;">
+                Welcome
+            </h1>
+            <p class="lead">
+                You Mean A Lot To Us :) <br> Made with LOVE, by <i>Team Berozgar</i>
+            </p>
+        </div>
+    </div>
+</div>
+
+<!-- My Section -->
+  <!-- <h1 style="margin-top: 50px;">Welcome <span id="displayname"></span></h1>
+  <h2 style="margin-top: 10px;">You mean a lot to Us :) </h2> -->
   <div class="dashboard" style="background-color: rgba(249, 249, 249, 0.5); padding: 30px;">
     <!-- Dashboard Section -->
     <section id="progspace">
@@ -78,13 +130,13 @@
 
       <!-- Weaather -->
 
-      <div class="card mb-4 rounded-3 shadow-sm" style="background-color: rgba(108, 108, 107, 0.2); ">
-        <div class="card-header py-3" style="background-color: rgba(171, 104, 26, 0.2); color: aliceblue;">
+      <div class="card mb-4 rounded-3 shadow-sm" >
+        <div class="card-header py-3" style="background-color: #E91E63; color: aliceblue;">
           <h4 class="my-0 fw-normal"><strong>Jamshedpur</strong></h4>
         </div>
-        <div class="card-body" style="background-color: rgba(84, 84, 84, 0.2); color:aliceblue;">
-          <h1 class="card-title pricing-card-title"><span id="temp"></span>°C<small class="text-body-secondary"
-              style="color: aliceblue;"></small></h1>
+        <div class="card-body" style="background-color: rgba(228, 224, 224, 0.5); color:rgb(5, 5, 5);">
+          <h1 class="card-title pricing-card-title" style="font-size: 72px; color: green;"><span id="temp"></span>°C<small class="text-body-secondary"
+              style="color: rgb(8, 8, 8);"></small></h1>
           <ul class="list-unstyled mt-3 mb-4">
             <li>Feels Like : <span id="feels_like"></span> </li>
             <li>Cloud PCT : <span id="cloud_pct"></span> </li>
@@ -98,35 +150,35 @@
 
       <!-- News -->
       <div class="card mb-4 rounded-3 shadow-sm" id="newssection"
-        style="background-color: rgba(84, 84, 84, 0.4); color:aliceblue; max-width: 50%; min-width: 300px;">
-        <div class="card-header py-3" style="background-color: rgba(171, 104, 26, 0.4); color: aliceblue;">
+        style="background-color: rgba(228, 224, 224, 0.5); color:#E91E63; max-width: 50%; min-width: 300px;">
+        <div class="card-header py-3" style="background-color: #E91E63; color: aliceblue;">
           <h4 class="my-0 fw-normal text-center"><strong>News Section</strong></h4>
         </div>
         <ul class="list-unstyled mt-3 mb-4" style="padding: 10px; ">
-          <li class="headline"><span class="col" id="news" style="color: aliceblue; font-size: 18px;"></span></li>
-          <li class="headline"><span class="col" id="news2" style="color: aliceblue; font-size: 18px;"></span></li>
-          <li class="headline"><span class="col" id="news3" style="color: aliceblue; font-size: 18px;"></span></li>
-          <li class="headline"><span class="col" id="news4" style="color: aliceblue; font-size: 18px;"></span></li>
-          <li class="headline"><span class="col" id="news5" style="color: aliceblue; font-size: 18px;"></span></li>
+          <li class="headline"><span class="col" id="news" style="color: black; font-size: 18px;"></span></li>
+          <li class="headline"><span class="col" id="news2" style="color: black; font-size: 18px;"></span></li>
+          <li class="headline"><span class="col" id="news3" style="color: black; font-size: 18px;"></span></li>
+          <li class="headline"><span class="col" id="news4" style="color: black; font-size: 18px;"></span></li>
+          <li class="headline"><span class="col" id="news5" style="color: black; font-size: 18px;"></span></li>
         </ul>
       </div>
 
       <!-- Sales -->
       <div class="card mb-4 rounded-3 shadow-sm" id="sales"
-        style="background-color: rgba(84, 84, 84, 0.4); color:aliceblue; ">
-        <div class="card-header py-3" style="background-color: rgba(171, 104, 26, 0.4); color: aliceblue;">
+        style="background-color: rgba(228, 224, 224, 0.5); color:rgb(3, 3, 3); ">
+        <div class="card-header py-3" style="background-color: #E91E63; color: aliceblue;">
           <h4 class="my-0 fw-normal text-center"><strong>Your Sales</strong></h4>
         </div>
         <div style="display: flex; flex-wrap: wrap; justify-content: space-between;">
           <div class="outcircle c1" style="margin: 20px;">
             <div class="incircle">
 
-              <span style="font-size: 14px; font-weight: bold;">Last<br>Month</span>
+              <span style="font-size: 14px; color: rgb(2, 153, 2); font-weight: bold; text-align: center;">Last<br>Month</span>
             </div>
             <svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="160px" height="160px">
               <defs>
                 <linearGradient id="GradientColor">
-                  <stop offset="0%" stop-color="bisque" />
+                  <stop offset="0%" stop-color="#E91E63" />
                   <stop offset="100%" stop-color="aliceblue" />
                 </linearGradient>
               </defs>
@@ -137,12 +189,12 @@
           <div class="outcircle c2" style="margin: 20px;">
             <div class="incircle">
 
-              <span style="font-size: 14px; font-weight: bold;">Average</span>
+              <span style="font-size: 14px; color: rgb(3, 151, 3); font-weight: bold;">Average</span>
             </div>
             <svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="160px" height="160px">
               <defs>
                 <linearGradient id="GradientColor">
-                  <stop offset="0%" stop-color="bisque" />
+                  <stop offset="0%" stop-color="#E91E63" />
                   <stop offset="100%" stop-color="aliceblue" />
                 </linearGradient>
               </defs>
@@ -151,8 +203,8 @@
           </div>
         </div>
         <section class="skillname">
-          <h4>Last Month Sales : <span id="msale"></span></h4>
-          <h4>Average Sales : <span id="avgsale"></span></h4>
+          <h5>Last Month Sales : <span id="msale"></span></h5>
+          <h5>Average Sales : <span id="avgsale"></span></h5>
 
         </section>
 
@@ -195,9 +247,10 @@
         <h2 id="email"></h2>
     </div>
 
-
+<br>
+<hr>
     <div class="tablediv" >
-      <table class="table table-hover" style="color: bisque; width: 80%; border: 2px solid bisque; max-width: 95%;">
+      <table class="table table-hover" style="color: #E91E63; width: 80%; border: 2px solid #E91E63; max-width: 95%;">
         <h2 class="heading">Your Listings</h2>
         <thead>
           <th>S no.
@@ -213,7 +266,8 @@
         </tbody>
       </table>
     </div>
-    <div class="footer">
+    <hr>
+    <!-- <div class="footer">
       <h2>We Pray to Grow With You :)</h2>
       <div class="contact">
 
@@ -225,7 +279,61 @@
       <br>
       <br>
       <span style="font-size: 18, ;"> Made By: Team Berozgar</span>
-    </div>
+    </div> -->
+    <!-- Footer -->
+    <footer>
+      <div class="container">
+          <div class="row">
+              <div class="col-md-3">
+                  <h5>About</h5>
+                  <p>कृषिCONNECT is an online B2C platform to bring fresh organic produce from farmers, straight to your dining tables. We aim to remove unnecessary middlemen and help out local farmers by getting them the pay they truly deserve.</p>
+              </div>
+              <div class="col-md-3">
+                  <h5>Links</h5>
+                  <ul>
+                      <li>
+                          <a href="about(1).html">About</a>
+                      </li>
+                      <li>
+                          <a href="contact(1).html">Contact Us</a>
+                      </li>
+                      <li>
+                          <a href="faq(1).html">FAQ</a>
+                      </li>
+                  </ul>
+              </div>
+              <div class="col-md-3">
+                   <h5>Contact</h5>
+                   <ul>
+                       <li>
+                          <a href="tel:+620892738334"><i class="fa fa-phone"></i> 08272367238</a>
+                      </li>
+                      <li>
+                          <a href="mailto:hello@domain.com"><i class="fa fa-envelope"></i> krishiconnect@gmail.com</a>
+                       </li>
+                   </ul>
+
+                   <h5>Follow Us</h5>
+                   <ul class="social">
+                       <li>
+                          <a href="javascript:void(0)" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                       </li>
+                       <li>
+                          <a href="javascript:void(0)" target="_blank"><i class="fab fa-instagram"></i></a>
+                       </li>
+                       <li>
+                          <a href="javascript:void(0)" target="_blank"><i class="fab fa-youtube"></i></a>
+                       </li>
+                   </ul>
+              </div>
+              <div class="col-md-3">
+                  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3678.6887952893885!2d86.14298181488601!3d22.776927685078057!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39f5e4daa475a5cd%3A0xd87b53fadcd771a1!2sNational%20Institute%20of%20Technology%2C%20Jamshedpur!5e0!3m2!1sen!2sin!4v1681221470770!5m2!1sen!2sin" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                  
+             </div>
+          </div>
+      </div>
+      <p class="copyright">&copy; कृषिCONNECT | Fresh From Farm. All rights reserved.</p>
+  </footer>
 
 
 
@@ -240,5 +348,9 @@
   integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js"
   integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ" crossorigin="anonymous"></script>
-
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+</body>
+<script src="//code.tidio.co/6lhn3kmjiszzas6xkcf7ubffrutssad7.js" async></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js" integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js" integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ" crossorigin="anonymous"></script>
 </html>
