--- a/schemes.html
+++ b/schemes.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" type="text/css" media="all" href="assets/packages/thumbelina/thumbelina.css">
     <link rel="stylesheet" type="text/css" media="all" href="assets/packages/bootstrap-touchspin/bootstrap-touchspin.css">
     <link rel="stylesheet" type="text/css" media="all" href="assets/css/theme.css">
-    <title>Document</title>
+    
   </head>
   <body>
     <nav class="navbar fixed-top navbar-expand-md navbar-dark bg-transparent" id="page-navigation">
@@ -35,6 +35,11 @@
                   </li>
                   <li class="nav-item">
                       <a href="schemes.html" class="nav-link active">SCHEMES</a>
+                  </li>
+                  <li class="navbar-item">
+                    <button class="nav-link" id="logout"
+                      style="background-color: rgba(224, 0, 0, 0.7); border-radius: 3px; color: aliceblue;"
+                      onclick="logout(event)">LogOut</button>
                   </li>
               </ul>
             </div>
@@ -113,7 +118,7 @@
           </div>
       </div>
   </section>
-    <div style="height: 500px; overflow: hidden;">
+    <div style="height: 600px; overflow: hidden;">
       <div id="carouselExampleRide" class="carousel slide" data-bs-ride="true">
         <div class="carousel-inner">
           <div class="carousel-item active">
@@ -334,7 +339,7 @@
   </footer>
 
 
-
+<script src="script.js" type="module"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
   </body>
   <script src="//code.tidio.co/6lhn3kmjiszzas6xkcf7ubffrutssad7.js" async></script>
