--- a/home.html
+++ b/home.html
@@ -59,30 +59,44 @@
     </div>
   </nav> -->
 
-  <nav class="navbar fixed-top navbar-expand-md navbar-dark bg-transparent" id="page-navigation">
-    <div class="container">
-        <!-- Toggle Button -->
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarcollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarcollapse">
-            <!-- Navbar Menu -->
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                    <a href="home.html" class="nav-link active">HOME</a>
-                </li>
-                <li class="nav-item">
-                    <a href="schemes.html" class="nav-link active">SCHEMES</a>
-                </li>
-                <li class="navbar-item">
-                  <button class="nav-link" id="logout"
-                    style="background-color: rgba(224, 0, 0, 0.7); border-radius: 3px; color: aliceblue;"
-                    onclick="logout(event)">LogOut</button>
-                </li>
-            </ul>
-          </div>
-    </div>
-  </nav>
+  <div class="page-header">
+    <!--=============== Navbar ===============-->
+    <nav class="navbar fixed-top navbar-expand-md navbar-dark bg-transparent" id="page-navigation">
+        <div class="container">
+            <!-- Navbar Brand -->
+            <a href="index(1).html" class="navbar-brand">
+                <img src="assets/img/logo/krishiconnect-high-resolution-logo-black-on-white-background.png" alt="">
+            </a>
+
+            <!-- Toggle Button -->
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarcollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbarcollapse">
+                <!-- Navbar Menu -->
+                <ul class="navbar-nav ml-auto" >
+              
+                  <li class="nav-item">
+                      <a href="home.html" class="nav-link active">HOME</a>
+                  </li>
+                  <li class="nav-item">
+                      <a href="schemes.html" class="nav-link active">SCHEMES</a>
+                  </li>
+                  <li class="navbar-item">
+                    <button class="nav-link" id="logout"
+                      style="background-color: rgba(224, 0, 0, 0.7); border-radius: 3px; color: aliceblue;"
+                      onclick="logout(event)">LogOut</button>
+                  </li>
+              </ul>
+              
+            </div>
+
+        </div>
+    </nav>
+</div>
+  <!-- Nav link -->
+  
   <div class="banner">
     <div class="jumbotron jumbotron-bg text-center rounded-0" style="background-image: url('assets/img/bg.jpg');">
         <div class="container">
@@ -338,6 +352,16 @@
 
 
     </script>
+    <script type="text/javascript" src="assets/js/jquery.js"></script>
+    <script type="text/javascript" src="assets/js/jquery-migrate.js"></script>
+    <script type="text/javascript" src="assets/packages/bootstrap/libraries/popper.js"></script>
+    <script type="text/javascript" src="assets/packages/bootstrap/bootstrap.js"></script>
+    <script type="text/javascript" src="assets/packages/o2system-ui/o2system-ui.js"></script>
+    <script type="text/javascript" src="assets/packages/owl-carousel/owl-carousel.js"></script>
+    <script type="text/javascript" src="assets/packages/cloudzoom/cloudzoom.js"></script>
+    <script type="text/javascript" src="assets/packages/thumbelina/thumbelina.js"></script>
+    <script type="text/javascript" src="assets/packages/bootstrap-touchspin/bootstrap-touchspin.js"></script>
+    <script type="text/javascript" src="assets/js/theme.js"></script>
 </body>
 <script src="//code.tidio.co/6lhn3kmjiszzas6xkcf7ubffrutssad7.js" async></script>
 <script src="script.js" type="module">
@@ -353,4 +377,5 @@
 <script src="//code.tidio.co/6lhn3kmjiszzas6xkcf7ubffrutssad7.js" async></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js" integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js" integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ" crossorigin="anonymous"></script>
+
 </html>
